# prettypretty

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  rr.sh  runtest.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dist.yml  gh-pages.yml
benches/: query.rs
crates/prettypretty/: CHANGELOG.md  Cargo.toml  README.md
crates/prettypretty/benches/: query.rs
crates/prettypretty/examples/: query.rs  three-steps.rs
crates/prettypretty/src/: error.rs  lib.rs  object.rs  spectrum.rs  termco.rs  theme.rs  util.rs
crates/prettypretty/src/cie/: d_series.rs  mod.rs  ten_deg.rs
crates/prettypretty/src/core/: conversion.rs  difference.rs  equality.rs  gamut.rs  math.rs  mod.rs  space.rs  string.rs
crates/prettypretty/src/style/: color.rs  context.rs  fmt.rs  format.rs  mod.rs  styling.rs
crates/prettypretty/src/trans/: hue_lightness.rs  translator.rs
crates/prettytty/: Cargo.toml  README.md
crates/prettytty/examples/: boo.rs  echo.rs  progress.rs  wow.rs
crates/prettytty/src/: api.rs  cmd.rs  conn.rs  err.rs  event.rs  lib.rs  opt.rs  read.rs  scan.rs  util.rs
crates/prettytty/src/scan/: buffer.rs  machine.rs  utf8.rs
crates/prettytty/src/sys/: into_result.rs  mod.rs  unix.rs  util.rs  windows.rs
docs/: book.py  book.toml  conf.py  conversions.rst  formats-and-spaces.rst  gamut.ipynb  hires-slices.rst  howto-color.rst  howto-style.rst  howto.rst  index.rst  pretty.css  pyextractor.py  tooling.rst  tools.rst
docs/apidocs/: color.rst  grid.rst  index.rst  prettypretty.rst  style.rst  tools.rst
docs/figures/: interpolate.txt
docs/prettypretty/: ansi.rst  darkmode.rst  fidelity.rst  ident.rst  style.rst  style_extras.rst  terminal.rst  theme.rst
docs/src/: README.md  SUMMARY.md  installation.md  links.md
docs/src/colors/: 1970s.md  integration.md
docs/src/deepdive/: colortheme.md  development.md  macropower.md  progressbar.md
docs/src/overview/: 1970s.md  2020s.md  integration.md  summary.md
docs/src/starting/: installation.md  one-two-three.md
examples/: echo.rs  progress.py  query.rs
pitty/: __init__.py  clr.py  grid.py
prettypretty/: ansi.py  cloud.py  color.pyi  color_object.py  color_types.py  darkmode.py  fidelity.py  grid.py  ident.py  observer.py  plot.py  progress.py  style.py  style_extras.py  terminal.py  termio.py  theme.py  vis3d.py  viz3d.py
prettypretty/api/: __init__.py  color.py
prettypretty/color/: __init__.py  __init__.pyi  ansi.py  apca.py  color.py  contrast.py  conversion.py  difference.py  equality.py  escape.pyi  gamut.py  gamut.pyi  grid.py  lores.py  object.py  serde.py  space.py  spec.py  spectrum.pyi  style.py  style.pyi  term.pyi  termco.pyi  theme.py  theme.pyi  trans.pyi
prettypretty/color/spectrum/: __init__.pyi  std_observer.pyi
prettypretty/color/style/: __init__.pyi  format.pyi
src/: cmd.rs  collect.rs  collection.rs  color.rs  core.rs  error.rs  escape.rs  format.rs  lib.rs  object.rs  parser.rs  prettyio.rs  serde.rs  spectrum.rs  style.html  style.rs  term.rs  term_color.rs  trans.rs  translation.rs  util.rs
src/cie/: d_series.rs  mod.rs  ten_deg.rs  two_deg.rs
src/color/: core.rs
src/core/: contrast.rs  conversion.rs  difference.rs  equality.rs  gamut.rs  math.rs  mod.rs  space.rs  string.rs  test_util.rs
src/style/: color.rs  context.rs  format.rs  mod.rs  styling.rs
src/term/: escape.rs  mod.rs  render.rs  scan.rs  slice.rs  terminal.rs  utf8.rs  util.rs
src/term/scan/: buffer.rs  machine.rs
src/term/sys/: mod.rs  unix.rs  windows.rs
src/termio/: escape.rs  mod.rs  render.rs  unix.rs
src/theme/: mod.rs  query.rs  theming.rs
src/trans/: hue_lightness.rs  mod.rs  theme.rs  translator.rs
test/: __init__.py  runtime.py  test_clr.py  test_color.py  test_style.py
