[package]
name = "prettypretty"
description = "Applying 2020s color science to 1970s terminal user interfaces"
keywords = ["awesome", "terminal", "color", "ANSI-escapes", "TUI"]
categories = ["command-line-interface", "gui", "graphics", "encoding"]
authors = ["Robert Grimm <rgrimm@alum.mit.edu>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/apparebit/prettypretty"
documentation = "https://docs.rs/prettypretty/latest/prettypretty/"
homepage = "https://crates.io/crates/prettypretty"
license = "Apache-2.0"
include = ["/README.md", "/LICENSE", "/src"]

[dependencies]
pyo3 = { features = ["extension-module"], optional = true }

[features]
default = []
f32 = []
pyffi = ["pyo3"]

# [lib]
# name = "_native_color"
# crate-type = ["cdylib"]


[package.metadata.docs.rs]
all-features = false
