[package]
name = "prettypretty"
description = "Applying 2020s color science to 1970s terminal user interfaces"
keywords = ["awesome", "terminal", "color", "ANSI-escapes", "TUI"]
categories = ["command-line-interface", "gui", "graphics", "encoding"]
authors = ["Robert Grimm <rgrimm@alum.mit.edu>"]
version = "0.10.0"
edition = "2021"
repository = "https://github.com/apparebit/prettypretty"
documentation = "https://docs.rs/prettypretty/latest/prettypretty/"
homepage = "https://crates.io/crates/prettypretty"
license = "Apache-2.0"
include = ["/README.md", "/LICENSE", "/src"]


[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3", "abi3-py311"], optional = true }


[features]
default = ["f64"]
f64 = []
pyffi = ["dep:pyo3"]


[lib]
name = "prettypretty"
crate-type = ["lib", "cdylib"]


[package.metadata.docs.rs]
all-features = false
