[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
impl_trait_in_params = "deny"
inefficient_to_string = "deny"
manual_instant_elapsed = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
map_unwrap_or = "deny"
map_with_unused_argument_over_ranges = "deny"
match_bool = "deny"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_panics_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
# must_use_candidate = "deny" # definitely too aggressive
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
non_send_fields_in_send_ty = "deny"
non_zero_suggestions = "deny"
option_if_let_else = "deny"
option_option = "deny"
or_fun_call = "deny"
pattern_type_mismatch = "deny"
# precedence_bits = "deny" # Rust 1.86
print_stderr = "deny"
print_stdout = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
single_match_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_split_at_newline = "deny"
string_add = "deny"
string_add_assign = "deny"
string_extend_chars = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
string_to_string = "deny"
suboptimal_flops = "deny"
trait_duplication_in_bounds = "deny"
transmute_ptr_to_ptr = "deny"
transmute_undefined_repr = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
unchecked_duration_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
uninhabited_references = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
# use_self = "deny" # seems to be too aggressive
useless_let_if_seq = "deny"
verbose_bit_mask = "deny"
verbose_file_reads = "deny"
while_float = "deny"

