[package]
name = "prettypretty"
authors = ["Robert Grimm <rgrimm@alum.mit.edu>"]
description = "Applying 2020s color science to 1970s terminal user interfaces"
keywords = ["awesome", "terminal", "color", "ANSI-escapes", "TUI"]
categories = ["command-line-interface", "gui", "graphics", "encoding"]
version = "0.12.0"
repository = "https://github.com/apparebit/prettypretty"
documentation = "https://docs.rs/prettypretty/latest/prettypretty/"
homepage = "https://crates.io/crates/prettypretty"
rust-version = "1.82"
edition = "2021"
license = "Apache-2.0"


[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3", "abi3-py311"], optional = true }
prettytty = { version = "0.3.0", path = "../prettytty", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }


[features]
default = ["f64", "tty"]
f64 = []
gamut = []
tty = ["dep:prettytty"]
pyffi = ["dep:pyo3"]


[lib]
name = "prettypretty"
crate-type = ["lib", "cdylib"]


[lints]
workspace = true


[package.metadata.docs.rs]
features = ["f64", "gamut", "tty"]
rustdoc-args = ["-e", "./docs/pretty.css"]


[[bench]]
name = "query"
harness = false
