[package]
name = "prettytty"
authors = ["Robert Grimm <rgrimm@alum.mit.edu>"]
description = "Simple, lightweight terminal I/O and configuration"
keywords = ["terminal", "tty", "raw-mode", "cbreak-mode", "console"]
categories = ["command-line-interface"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/apparebit/prettypretty"
documentation = "https://docs.rs/prettytty/latest/prettytty/"
homepage = "https://crates.io/crates/prettytty"
license = "Apache-2.0"


[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.168" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Console",
    "Win32_System_Threading",
]

[dev-dependencies]
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }


[lib]
name = "prettytty"
